--- a/Aida64Mobile/Aida64Mobile/Views/StartPage.xaml
+++ b/Aida64Mobile/Aida64Mobile/Views/StartPage.xaml
@@ -2,12 +2,14 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:skia="clr-namespace:SkiaSharp.Views.Forms;assembly=SkiaSharp.Views.Forms"
+             xmlns:tt="clr-namespace:TouchTracking"
              x:Class="Aida64Mobile.Views.StartPage">
     <ContentPage.Content>
-        <skia:SKCanvasView x:Name="canvasView" PaintSurface="OnCanvasViewPaintSurface">
-            <skia:SKCanvasView.GestureRecognizers>
-                <TapGestureRecognizer Tapped="OnCanvasViewTapped" />
-            </skia:SKCanvasView.GestureRecognizers>
-        </skia:SKCanvasView>
+        <Grid Grid.Row="0" Grid.Column="0">
+            <skia:SKCanvasView x:Name="canvasView" PaintSurface="OnCanvasViewPaintSurface" />
+            <Grid.Effects>
+                <tt:TouchEffect Capture="True" TouchAction="OnTouchEffectAction" />
+            </Grid.Effects>
+        </Grid>
     </ContentPage.Content>
 </ContentPage>
