--- a/Aida64Mobile/Aida64Mobile/Views/StartPage.xaml
+++ b/Aida64Mobile/Aida64Mobile/Views/StartPage.xaml
@@ -2,8 +2,8 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:skia="clr-namespace:SkiaSharp.Views.Forms;assembly=SkiaSharp.Views.Forms"
-             xmlns:tt="clr-namespace:TouchTracking"
-             x:Class="Aida64Mobile.Views.StartPage">
+             xmlns:tt="clr-namespace:TouchTracking;assembly=Aida64Common"
+             x:Class="Aida64Mobile.Views.StartPage" >
     <ContentPage.Content>
         <Grid Grid.Row="0" Grid.Column="0">
             <skia:SKCanvasView x:Name="canvasView" PaintSurface="OnCanvasViewPaintSurface" />
