--- a/Aida64Display/Aida64Display/Views/StartPage.xaml
+++ b/Aida64Display/Aida64Display/Views/StartPage.xaml
@@ -3,13 +3,10 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:skia="clr-namespace:SkiaSharp.Views.Forms;assembly=SkiaSharp.Views.Forms"
              xmlns:tt="clr-namespace:TouchTracking;assembly=Aida64Common"
-             x:Class="Aida64Display.Views.StartPage">
+             x:Class="Aida64Display.Views.StartPage" BackgroundColor="#4040FF">
     <ContentPage.Content>
-        <Grid Grid.Row="0" Grid.Column="0">
-            <skia:SKCanvasView x:Name="canvasView" PaintSurface="OnCanvasViewPaintSurface" />
-            <Grid.Effects>
-                <tt:TouchEffect Capture="True" TouchAction="OnTouchEffectAction" />
-            </Grid.Effects>
-        </Grid>
+        <StackLayout>
+            <Label Text="Aida64Display" FontSize="72" HorizontalTextAlignment="Center"/>
+        </StackLayout>
     </ContentPage.Content>
 </ContentPage>
